--- a/index.html
+++ b/index.html
@@ -5,11 +5,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Teacher Portflio</title>
 </head>
 
 <body>
+
+    <h1>This is Teacher World.!</h1>
+    <h2>This is <span class="name-color">Shib shankar Sen</span></h2>
+    <h3>He Is The Finest Teacher <span class="name-color">At Physics Depertment</span></h3>
+    <h4>Let's know about him:-</h4>
+    <section>
+        <div class="half-width">
+            <p>He is an honest man.He orginally from Faridpur,Dhaka.But now he stay in Rajshahi.He studied at
+                University
+                of
+                Dhaka.After his graduation he teaches at Govt.Rajendra college.and few years later he came Rajshahi
+                NGDC
+                college
+                as a Dept.Head Teachr.now he teaches many different type people like
+                capaiya,noukhailla,faridpuirra,dhakiya.Actually he is really a great human being.all the student
+                like
+                him
+                and i
+                know it.so this is Shib Sankar's personal activities.
+            </p><br>
+            <a target="_blank" class="clickbutton"
+                href="https://chrome.google.com/webstore/detail/url-shortener/oodfdmglhbbkkcngodjjagblikmoegpa?hl=en">CLICK
+                HERE</a>
+        </div>
+        <div class="half-width">
+            <img src="sir-bg-.png">
+
+        </div>
+    </section>
 
 </body>
 
