--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
 </head>
 
 <body>
-
-    <h1>This is Teacher World.!</h1>
-    <h2>This is <span class="name-color">Shib shankar Sen</span></h2>
-    <h3>He Is The Finest Teacher <span class="name-color">At Physics Depertment</span></h3>
-    <h4>Let's know about him:-</h4>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
+
+            <h1>This is Teacher World.!</h1>
+            <h2>This is <span class="name-color">Shib shankar Sen</span></h2>
+            <h3>He Is The Finest Teacher <span class="name-color">At Physics Depertment</span></h3>
+            <h4>Let's know about him:-</h4>
+
+
+
             <p>He is an honest man.He orginally from Faridpur,Dhaka.But now he stay in Rajshahi.He studied at
                 University
                 of
