--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="top-banner">
         <div class="half-width">
 
-            <h1>This is Teacher World.!</h1>
+            <h1>This is Teacher World!</h1>
             <h2>This is <span class="name-color">Shib shankar Sen</span></h2>
             <h3>He Is The Finest Teacher <span class="name-color">At Physics Depertment</span></h3>
             <h4>Let's know about him:-</h4>
@@ -44,6 +44,41 @@
             <img src="sir-bg-.png">
 
         </div>
+    </section>
+
+    <section class="ngdc">
+        <div class="half-width">
+            <img src="clg-pic-bg2.png">
+
+
+        </div>
+
+        <div class="half-width">
+            <h1>This Is NGDC</h1>
+            <h2>It's a part of national university college</h2>
+            <h4>The teacher of <span class="name-color">Shib Shankar</span> is love this university</h4>
+
+            <h5>Student opinon:-
+            </h5>
+            <p>Actually,honestly speaking,I think there has no available good teacher at physics
+                Depertment like Shib
+                Shankar sir.End of the day every student wants to need help to teacher.but most of the case student find
+                that "Only Shib Shankar sir help the student accroding their problem and other teacher avoid this
+                topic.so people don't know.why are they avoid student problem. It's a painful to every student.Beacuse
+                all of them want to more learn.But this is not possible for <span class="name-color">shankar's</span>
+                alone.So student of therefore pray and hope that they need more good teacher at physics depertment.</p>
+            <br>
+
+            <a target="_blank" class="new-color"
+                href="https://www.indeed.com/hire?mna=5&aceid=&gclid=Cj0KCQiA_c-OBhDFARIsAIFg3eyYnHqirOJBZRbnwK48zxyjliNwuPIO56UyhpMd8w_oBLAB7MFv_UgaAvxwEALw_wcB">VOTED</a>
+
+
+
+
+        </div>
+
+
+
     </section>
 
 </body>
