--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexable-container">
         <div class="half-width">
 
             <h1>This is Teacher World!</h1>
@@ -46,7 +46,7 @@
         </div>
     </section>
 
-    <section class="ngdc">
+    <section class="ngdc flexable-container">
         <div class="half-width">
             <img src="clg-pic-bg2.png">
 
@@ -76,6 +76,35 @@
 
 
         </div>
+
+
+
+    </section>
+
+    <section class="exprience-area">
+
+
+        <h1>Exprience</h1>
+        <div class="flexable-container">
+
+            <div class="box-width">
+                <h2>Teacher's exprience</h2>
+                <h3><span class="name-color">Shib Shankar is the depertment teacher</span></h3>
+                <p>His education qualification is awesome.He is ex Dhaka univarsity's student.he has one more
+                    skill.Teaching is one of the best skill.he leads a happy life with his family.</p>
+            </div>
+
+            <div class="box-width">
+                <h2>Students exprience</h2>
+                <h3><span class="name-color">The students have some good skill</span></h3>
+                <p>The Depertment of physics students are more intelleigent without me.most of the students are
+                    gentleman.And they know how to utilize their important time.They also know avout behaving well with
+                    others. </p>
+            </div>
+
+
+        </div>
+
 
 
 
