--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
     <section class="exprience-area">
 
 
-        <h1>Exprience</h1>
+        <h1>Exprience :</h1>
         <div class="flexable-container">
 
-            <div class="box-width">
-                <h2>Teacher's exprience</h2>
+            <div id="width-box" class="box-width">
+                <h2>Teacher's exprience-</h2>
                 <h3><span class="name-color">Shib Shankar is the depertment teacher</span></h3>
                 <p>His education qualification is awesome.He is ex Dhaka univarsity's student.he has one more
                     skill.Teaching is one of the best skill.he leads a happy life with his family.</p>
             </div>
 
-            <div class="box-width">
-                <h2>Students exprience</h2>
-                <h3><span class="name-color">The students have some good skill</span></h3>
+            <div id="border-box" class="box-width">
+                <h2>Students exprience-</h2>
+                <h3><span class="name-color">The students have some good skills</span></h3>
                 <p>The Depertment of physics students are more intelleigent without me.most of the students are
                     gentleman.And they know how to utilize their important time.They also know avout behaving well with
                     others. </p>
@@ -104,9 +104,9 @@
 
 
         </div>
+        <br>
 
-
-
+        <p id="amar-name">"web-site creator:@Sabbir hossen"</p>
 
     </section>
 
